--- a/Sparkt.WebApp/Views/Home/GetInTouch.cshtml
+++ b/Sparkt.WebApp/Views/Home/GetInTouch.cshtml
@@ -156,6 +156,7 @@
         <div class="thank_you_wrapp">
             <span class="thanks-icon"><i class="far fa-smile"></i></span>
             <p id="pThankYouMessage">Thank You!</p>
+            <p>Our representative will get in touch with you soon.</p>
         </div>
     </div>
     <aside class="fixed_side_text">
