Category mandatory changes

--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -2665,6 +2665,7 @@
                                             <option value="4">Media Inquiries</option>
                                             <option value="5">Everything Else</option>
                                         </select>
+                                        <span class="error" id="spnCategory" style="display:none">Category is required.</span>
 
                                     </div>
                                     <div class="input-field col s12">
